@@ -69,13 +69,13 @@
     <jackson.package>com.fasterxml.jackson</jackson.package>
     <jackson.version>2.17.0</jackson.version>
     <jackson-databind.version>2.17.0</jackson-databind.version>
-    <japicmp.version>0.18.2</japicmp.version>
+    <japicmp.version>0.21.0</japicmp.version>
     <javax.annotation.version>1.3.2</javax.annotation.version>
     <spotless.version>2.30.0</spotless.version>
     <shade.prefix>shaded.parquet</shade.prefix>
     <hadoop.version>3.3.6</hadoop.version>
     <parquet.format.version>2.10.0</parquet.format.version>
-    <previous.version>1.13.0</previous.version>
+    <previous.version>1.13.1</previous.version>
     <thrift.executable>thrift</thrift.executable>
     <format.thrift.executable>${thrift.executable}</format.thrift.executable>
     <scala.version>2.12.17</scala.version>
@@ -97,13 +97,15 @@
     <powermock.version>2.0.9</powermock.version>
     <net.openhft.version>0.16</net.openhft.version>
     <exec-maven-plugin.version>1.6.0</exec-maven-plugin.version>
+    <!-- override org.apache:apache version -->
+    <version.maven-compiler-plugin>3.13.0</version.maven-compiler-plugin>
 
     <!-- parquet-cli dependencies -->
     <opencsv.version>2.3</opencsv.version>
     <jcommander.version>1.82</jcommander.version>
     <tukaani.version>1.9</tukaani.version>
-    <zstd-jni.version>1.5.5-11</zstd-jni.version>
-    <commons-text.version>1.11.0</commons-text.version>
+    <zstd-jni.version>1.5.6-2</zstd-jni.version>
+    <commons-text.version>1.12.0</commons-text.version>
     <jsr305.version>3.0.2</jsr305.version>
     <commons-lang3.version>3.14.0</commons-lang3.version>
 
@@ -412,11 +414,6 @@
         <!-- Override source and target from the ASF parent -->
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <configuration>
-          <argLine>-XX:MaxPermSize=256m</argLine>
-          <source>${maven.compiler.source}</source>
-          <target>${maven.compiler.target}</target>
-        </configuration>
       </plugin>
 
       <plugin>
@@ -580,29 +577,14 @@
             </excludeModules>
             <excludes>
               <exclude>${shade.prefix}</exclude>
-              <exclude>org.apache.parquet.hadoop.CodecFactory</exclude> <!-- change field type from Configuration to ParquetConfiguration -->
-              <exclude>org.apache.parquet.hadoop.ParquetReader</exclude> <!-- change field type from Configuration to ParquetConfiguration -->
-              <exclude>org.apache.parquet.thrift.projection.deprecated.PathGlobPattern</exclude>
-              <!-- japicmp is overly aggressive on interface types in signatures, a type was changed to a supertype but this still triggers it -->
-              <exclude>org.apache.parquet.hadoop.ColumnChunkPageWriteStore</exclude>
-              <exclude>org.apache.parquet.hadoop.ParquetRecordWriter</exclude>
-              <!-- likely japicmp bug, triggers on new interface methods after updating to 0.18.1 -->
-              <exclude>org.apache.parquet.conf.PlainParquetConfiguration#getClass(java.lang.String,java.lang.Class,java.lang.Class)</exclude>
-              <exclude>org.apache.parquet.conf.ParquetConfiguration#getClass(java.lang.String,java.lang.Class,java.lang.Class)</exclude>
-              <exclude>org.apache.parquet.hadoop.util.SerializationUtil#readObjectFromConfAsBase64(java.lang.String,org.apache.parquet.conf.ParquetConfiguration)</exclude>
-              <exclude>org.apache.parquet.conf.HadoopParquetConfiguration#getClass(java.lang.String,java.lang.Class,java.lang.Class)</exclude>
-              <exclude>org.apache.parquet.avro.AvroParquetReader#builder(org.apache.parquet.io.InputFile,org.apache.parquet.conf.ParquetConfiguration)</exclude>
-              <exclude>org.apache.parquet.hadoop.thrift.TBaseWriteSupport#setThriftClass(org.apache.parquet.conf.ParquetConfiguration,java.lang.Class)</exclude>
-              <exclude>org.apache.parquet.proto.ProtoParquetReader#builder(org.apache.hadoop.fs.Path,boolean)</exclude>
-              <exclude>org.apache.parquet.proto.ProtoParquetReader#builder(org.apache.parquet.io.InputFile,boolean)</exclude>
-
+              <!-- Removal of a protected method in a class that's not supposed to be subclassed by third-party code -->
+              <exclude>org.apache.parquet.column.values.bytestreamsplit.ByteStreamSplitValuesReader#gatherElementDataFromStreams(byte[])</exclude>
               <!-- Due to the removal of deprecated methods -->
-              <exclude>org.apache.parquet.arrow.schema.SchemaMapping</exclude>
-
-              <exclude>org.apache.parquet.thrift.struct.ThriftType</exclude>
-
-              <exclude>org.apache.parquet.io.api.Binary#get2BytesLittleEndian()</exclude>
-              <exclude>org.apache.parquet.schema.LogicalTypeAnnotation$Float16LogicalTypeAnnotation#accept(org.apache.parquet.schema.LogicalTypeAnnotation$LogicalTypeAnnotationVisitor)</exclude>
+              <exclude>org.apache.parquet.arrow.schema.SchemaMapping$TypeMappingVisitor#visit(org.apache.parquet.arrow.schema.SchemaMapping$MapTypeMapping)</exclude>
+              <!-- Make static variables final -->
+              <exclude>org.apache.parquet.avro.AvroReadSupport#AVRO_REQUESTED_PROJECTION</exclude>
+              <exclude>org.apache.parquet.avro.AvroReadSupport#AVRO_DATA_SUPPLIER</exclude>
+              <exclude>org.apache.parquet.hadoop.ParquetFileReader#PARQUET_READ_PARALLELISM</exclude>
             </excludes>
           </parameter>
         </configuration>
@@ -636,7 +618,7 @@
       <plugin>
         <groupId>org.cyclonedx</groupId>
         <artifactId>cyclonedx-maven-plugin</artifactId>
-        <version>2.7.11</version>
+        <version>2.8.0</version>
         <executions>
           <execution>
             <phase>package</phase>
@@ -651,6 +633,17 @@
 
   <profiles>
     <profile>
+      <id>jdk9+</id>
+      <activation>
+        <jdk>[9,)</jdk>
+      </activation>
+      <properties>
+        <!-- release takes precedence over source/target if java version is 9 or higher -->
+        <maven.compiler.release>8</maven.compiler.release>
+      </properties>
+    </profile>
+
+    <profile>
       <id>hadoop2</id>
       <properties>
         <hadoop.version>2.7.3</hadoop.version>
@@ -664,21 +657,6 @@
         <surefire.logLevel>INFO</surefire.logLevel>
         <surefire.argLine>-XX:MaxJavaStackTraceDepth=1024</surefire.argLine>
       </properties>
-    </profile>
-
-    <profile>
-      <id>jdk9+</id>
-      <activation>
-        <jdk>[1.9,)</jdk>
-      </activation>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-compiler-plugin</artifactId>
-          </plugin>
-        </plugins>
-      </build>
     </profile>
 
     <profile>
